Fixed: Elenore url

--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@ route: projects
 projects:
 - name: Elenore
   url: https://yellowdi.github.io/Elenore/
-  slug: Elenore
+  slug: elenore
   date: Jul 2017
   content: >
     <p>Elenore is an open source CSS framework based on Flexbox and built with Sass.It's 100% responsive, fully modular, and available for free.</p>
