修正CDN证书问题

--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
 <link rel="canonical" href="https://yellowdi.github.io/">
 
 <!-- DNS prefetching for static files -->
-<link rel="dns-prefetch" href="https://7xp63o.com1.z0.glb.clouddn.com">
+<link rel="dns-prefetch" href="http://7xp63o.com1.z0.glb.clouddn.com">
 
 <!-- Head hooks -->
 
